--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 
 [dependencies]
 kvdb = "0.7.0"
+kvdb-memorydb = "0.7.0"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 kvdb-web = "0.7.0"
